# sample-sfc-agentic-control-plane

./: .gitignore  README.md  cdk.json  package.json  tsconfig.json
.github/workflows/: main.yml
lib/: sfc-control-plane-stack.ts  ui-stack.ts
lib/constructs/: control-plane-api.ts  heartbeat-rule.ts  launch-package-tables.ts  sfc-config-agent-infra.ts  ui-hosting.ts
src/: Dockerfile.deps  agent.py  requirements.txt  sfc-spec-mcp-server.py
src/edge/: pyproject.toml  run.bat  run.command  run.sh  runner.py
src/edge/docker/: run-docker.bat  run-docker.command
src/lambda_handlers/: agent_create_config_handler.py  agent_remediate_handler.py  config_handler.py  gg_comp_handler.py  heartbeat_ingestion_handler.py  iot_control_handler.py  iot_prov_handler.py  jwt_authorizer_handler.py  launch_pkg_handler.py  logs_handler.py  metrics_handler.py  tag_extract_handler.py
src/layer/python/sfc_cp_utils/: __init__.py  ddb.py  iot.py  s3.py
src/openapi/: control-plane-api.yaml
src/scripts/: build_launch_agentcore.py
src/tools/: file_operations.py  prompt_logger.py
src/ui/: index.html  package.json  tailwind.config.ts  vite.config.ts
src/ui/src/: App.tsx  auth.ts  index.css  main.tsx
src/ui/src/api/: client.ts
src/ui/src/components/: AiConfigWizard.tsx  ConfirmDialog.tsx  FocusBanner.tsx  GgDeployDialog.tsx  HeartbeatStatusLed.tsx  LoginGate.tsx  MarkdownRenderer.tsx  MetricsDashboard.tsx  MonacoJsonEditor.tsx  OtelLogStream.tsx  PackageControlPanel.tsx  RefreshButton.tsx  RemediationConfirmDialog.tsx  SortableHeader.tsx  StatusBadge.tsx  TagEditor.tsx  (+1 more)
(+6 files in other folders)
