[project]
name = "aws-sfc-runtime-agent"
version = "1.0.0"
description = "SFC edge runtime agent — IoT-connected SFC process manager"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "aws-opentelemetry-distro>=0.6",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "awsiotsdk>=1.21",
    "boto3>=1.34",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["runner.py"]

[tool.uv]
dev-dependencies = []